Details
-
Bug
-
Status: Closed
-
P1: Critical
-
Resolution: Done
-
5.14.0 Beta 1
-
None
-
-
c3ba57620c2c40d285004af2e1809e581e6bb7e7 (qt/qtsvg/5.14.0)
Description
Some svg images are not drawn when the Image sourceSize is set. The attached example also includes a custom QQuickImageProvider for testing purpose.
The attached example code works for most svg but some fail:
property string imgName: "br.svg" // fails property string imgName: "de.svg" //works Image { source: "qrc:/flags/" + col.imgName width: 100 height: 100 sourceSize: Qt.size(100, 100) // comment this out and all start to work }
The problem occurs since Qt 5.14. Qt 5.13.1 works fine.
Attachments
Issue Links
- is duplicated by
-
QTBUG-79690 Qml Image Issue.
-
- Closed
-
- relates to
-
QTBUG-78200 [REG 5.13->5.14] SVG with viewBox not in (0,0) is not rendered
-
- Closed
-
- resulted in
-
QTBUG-80954 [REG 5.13->5.14] QSvgRenderer draws at incorrect position
-
- Closed
-